# kai-trader

./: .dockerignore  .env.example  .gitignore  .mcp.json  BACKTEST_PLAN.md  CLAUDE.md  Dockerfile  INCOME_PLAN.md  LIVE_TRADING_PLAN.md  MORNING_REPORT.md  NEW_SESSION_PROMPT.md  PHASE3.md  PHASE5.md  PHASE6.md  PRODUCTION_PLAN.md  README.md  STRATEGY_AUDIT.md  TRACKER.md  TRIAL_PLAN.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
scripts/: apply_migrations.py  cache_health.py  create_chat_ro_role.py  e2e_smoke_test.py  finalize_run.py  morning_report.py  postprocess_backtest.py  run_backtest_sensitivity.py  run_bot.sh  sanity_check.py  spy_benchmark.py  test_drawdown_trip.py  warm_iv_history.py  write_final_report.py
src/kai_trader/: __init__.py  config.py  logging.py
src/kai_trader/approvals/: __init__.py  applier.py
src/kai_trader/backtest/: __init__.py  __main__.py  assignment_sim.py  broker.py  cli.py  clock.py  costs.py  drawdown_sim.py  fills.py  runner.py  state.py
src/kai_trader/bot/: __init__.py  auth.py  formatting.py  main.py
src/kai_trader/broker/: __init__.py  alpaca.py  market_data.py  options_data.py
src/kai_trader/chat/: __init__.py  chunker.py  client.py  conversation.py  locks.py  system_prompt.py  tools.py
src/kai_trader/db/: __init__.py  account_snapshots.py  chat_history.py  client.py  decision_log.py  events.py  orders.py  (+7 more)
tests/: conftest.py  test_account_snapshots.py  test_approvals_applier.py  test_bot_main.py  test_broker_alpaca.py  test_chat_accuracy.py  test_chat_chunker.py  test_chat_conversation.py  test_chat_db.py  test_chat_locks.py  test_chat_readonly.py  test_chat_tools.py  test_config.py  test_daily_report.py  test_db_client.py  test_db_pending_close.py  test_dependency_probe.py  test_drawdown_trip.py  test_equity_chart.py  test_events_dispatcher_render.py  test_flags_nag.py  test_formatting.py  test_handler_approval.py  test_handler_chat.py  test_handler_decisions.py  test_handler_dlq.py  test_heartbeat.py  test_income_handler.py  test_integration_alpaca.py  test_integration_supabase.py  test_logging.py  test_market_data.py  test_memory_profile.py  test_migrations.py  test_notifications_producer.py  test_notifications_worker.py  test_options_data.py  test_orders_helpers.py  test_regime_history.py  test_schema_check.py  (+19 more)
tests/backtest/: test_assignment_sim.py  test_chains.py  test_drawdown_sim.py  test_fills_costs.py  test_greeks.py  test_iv_history.py  test_leakage_audit.py  test_margin_state.py  test_runner_integration.py  test_state.py  test_summary_metrics.py  test_universe.py
tests/bot/: test_auth.py  test_formatting.py  test_handlers.py
(+103 files in other folders)
