[project]
name = "kai-trader"
version = "0.1.0"
description = "Kai Trader: defensive options wheel trading system, monitored via Telegram."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kai Trader" },
]
dependencies = [
    "python-telegram-bot>=20.7,<22",
    "asyncpg>=0.29,<0.31",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1.0,<2",
    "structlog>=24.1,<26",
    "tzdata>=2024.1",
    "alpaca-py>=0.32,<1",
    "yfinance>=0.2.40,<1",
    "anthropic>=0.39,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=4.1,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kai_trader"]

[tool.hatch.build.targets.sdist]
include = ["src/kai_trader", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long, handled by formatter where relevant
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
packages = ["kai_trader"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=kai_trader",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: tests that hit live Supabase, skipped unless SUPABASE_INTEGRATION_TEST=1",
    "alpaca_integration: tests that hit live Alpaca paper, skipped unless ALPACA_INTEGRATION_TEST=1",
]
